--- a/public/sass/_components.scss
+++ b/public/sass/_components.scss
@@ -101,8 +101,7 @@ option {
 .story-wrapper {
     border-left: 1px solid var.$color-story-text;
     border-right: 1px solid var.$color-story-text;
-    border-bottom: 1px solid var.$color-story-text;
-    
+    border-bottom: 1px solid var.$color-story-text; 
 }
 
 #picture {
@@ -115,6 +114,9 @@ option {
 {
     font-size: 2.5rem;
     padding: 0 2rem;
+    overflow-y:auto;
+    overflow-x:hidden;
+    height:40rem;
 }
 
 /*
